# entra-verified-id

./: .dockerignore  .gitignore  README.md  TECHNICAL.md  cdk.json  deploy.sh  destroy.sh  package-lock.json  package.json  tsconfig.json
admin/: Dockerfile  pyproject.toml
admin/app/: auth.py  deps.py  main.py  settings.py
admin/app/models/: saml_apps.py  setup.py  system_config.py
admin/app/routes/: audit.py  auth.py  config.py  keys.py  saml_apps.py  sessions.py  setup.py
admin/app/services/: key_service.py  setup_service.py
admin/web/: index.html  package.json  tsconfig.json  vite.config.ts
admin/web/src/: App.tsx  main.tsx
admin/web/src/api/: audit.ts  auth.ts  client.ts  config.ts  index.ts  keys.ts  samlApps.ts  sessions.ts  setup.ts
admin/web/src/components/: AppShell.tsx  TableStyles.ts
admin/web/src/hooks/: useAuth.ts
admin/web/src/pages/: Audit.tsx  Config.tsx  Dashboard.tsx  Keys.tsx  Login.tsx  Sessions.tsx
admin/web/src/pages/SamlApps/: Detail.tsx  Edit.tsx  List.tsx
admin/web/src/pages/Setup/: SetupWizard.tsx  Step1AdminUser.tsx  Step2Tenant.tsx  Step3Did.tsx  Step4Domain.tsx  Step5Keys.tsx  Step6Review.tsx
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
lambdas/issue_callback/: handler.py
lambdas/issue_start/: handler.py
lambdas/saml_idp/: handler.py  (+1 more)
layer/: Dockerfile
lib/: admin-stack.ts  data-stack.ts  layers-stack.ts  main-app-stack.ts  public-frontend-stack.ts  v2-stack.ts
shared-ui/: package.json  tsconfig.json
test/: v2.test.ts
(+15 files in other folders)
