[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "entra-vid-admin"
version = "2.0.0"
description = "Entra Verified ID Admin Console – FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.35.0",
    "cryptography>=43.0.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.9.0",
    "pyotp>=2.9.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "moto[dynamodb,s3,secretsmanager]>=5.0.0",
    "mypy-boto3-dynamodb>=1.35.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
